src/components/Modal.css
.Modal-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--background-glass);
  backdrop-filter: blur(8px);
  -webkit-backdrop-filter: blur(8px);
  display: flex;
  justify-content: center;
  align-items: center;
  transition: opacity 0.25s;
  opacity: 0;
}

.Modal-background-loading {
  background: var(--background);
  backdrop-filter: none;
  -webkit-backdrop-filter: none;

}

.Modal-background-active {
  opacity: 1;
}

.Modal {
  position: relative;
  background: var(--background);
  border: solid 1px var(--border-color); 
  border-radius: var(--unit);
  color: var(--text-color);
  transition: all 1s;
  overflow: hidden;
}

.Modal-close {
  position: absolute;
  top: var(--unit);
  right: var(--unit);
}

.Modal-content {
  overflow: auto;
}

.Modal-warning {
  border-color: var(--color-warn);
  padding: var(--unit);
}

@media screen and (max-width: 640px) {
  .Modal {
    max-width: 80%;
    max-height: 80%;
  }
}

